--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,15 +18,23 @@ jobs:
       with:
         python-version: '3.11'
     
-    - name: Install dependencies
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
-    - name: Install Playwright
+    - name: Install Node dependencies
       run: |
-        playwright install chromium
-        playwright install-deps chromium
+        npm install
+    
+    - name: Install Playwright browsers with dependencies
+      run: |
+        npx playwright install --with-deps chromium
     
     - name: Run Playwright tests
       run: |
